[package]
name = "unarray"
description = "Utilities for working with uninitialized arrays"
repository = "https://github.com/cameron1024/unarray"
license = "MIT OR Apache-2.0"
version = "0.1.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = { git = "https://github.com/input-output-hk/proptest" }
test-strategy = "0.2"
